@@ -2,6 +2,7 @@ NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
 V1.3.0
+- NEW : Add new gallery also in manage tab
 - NEW : AJAX support for Imagebrowser and gallery navigation (THX to Anty)
 - Added : jQuery Multiple File Upload Plugin v1.44
 - Added : SWFUpload V2.2.0
